fix: element visible next step style

--- a/src/css/photographer.css
+++ b/src/css/photographer.css
@@ -112,6 +112,7 @@
 .picture-details{
     display: flex;
     justify-content: space-between;
+    width: 100px;
 }
 
 .picture-likes{
@@ -123,5 +124,8 @@
     height: 300px;
 }
 
+.picture-video{
+    width: 350px;
+}
 
 
